--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -1,11 +1,89 @@
+.collapsable-wrapper {
+	position: fixed;
+	top: 0;
+	width: 80px;
+	height: 100dvh;
+	background-color: var(--color-background-base);
+	transition: all 300ms ease;
+}
+
+.collapsable-wrapper[data-open="true"] {
+	width: 320px;
+}
+
 .sidebar {
 	display: flex;
 	flex-direction: column;
 	gap: 56px;
 	max-width: 320px;
-	height: 100%;
 	background-color: var(--color-background-base);
 	border-right: 1px solid var(--color-brand-50);
+}
+
+.close-button {
+	position: absolute;
+	top: 86px;
+	right: 24px;
+	display: flex;
+	align-items: center;
+	align-self: center;
+	justify-content: center;
+	width: 28px;
+	height: 28px;
+	padding: 0;
+	cursor: pointer;
+	background: transparent;
+	border: none;
+}
+
+.burger-icon {
+	position: relative;
+	display: block;
+	width: 20px;
+	height: 4px;
+	background-color: var(--color-text-strong);
+	border-radius: 4px;
+	transition: all 300ms ease;
+}
+
+.burger-icon::before {
+	position: absolute;
+	top: -8px;
+	left: 0;
+	width: 20px;
+	height: 4px;
+	content: "";
+	background-color: var(--color-text-strong);
+	border-radius: 4px;
+	transition: all 300ms ease;
+}
+
+.burger-icon::after {
+	position: absolute;
+	bottom: -8px;
+	left: 0;
+	width: 20px;
+	height: 4px;
+	content: "";
+	background-color: var(--color-text-strong);
+	border-radius: 4px;
+	transition: all 300ms ease;
+}
+
+.collapsable-wrapper[data-open="true"] .burger-icon {
+	background-color: transparent;
+}
+
+.collapsable-wrapper[data-open="true"] .burger-icon::before {
+	width: 16px;
+	transform: translate(-2px, -2px) rotate(-45deg);
+	transform-origin: top right;
+}
+
+.collapsable-wrapper[data-open="true"] .burger-icon::after {
+	width: 16px;
+	transform: translate(-2px, 2px) rotate(45deg);
+	transform-origin: bottom right;
 }
 
 .logo {
