--- a/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
+++ b/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
@@ -1,13 +1,13 @@
 .section {
 	display: flex;
 	flex-direction: column;
-	gap: 100px;
+	gap: 96px;
 	width: 100%;
-	padding-top: 100px;
+	padding-top: 96px;
 }
 
 .section-title {
-	margin-bottom: 0;
+	margin: 0;
 	font-size: var(--font-size-display);
 	font-weight: var(--font-weight-bold);
 	color: var(--color-text-strong);
@@ -22,19 +22,9 @@
 	text-align: center;
 }
 
-.section-cover-image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	object-position: center;
-}
-
 .section-cover {
-	display: block;
 	width: 100%;
-	max-height: 100vh;
-	aspect-ratio: 1632 / 918;
-	overflow-y: hidden;
+	aspect-ratio: 320 / 119;
 	background-image: url("/assets/images/landing-cover.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
