--- a/apps/frontend/src/pages/auth/libs/components/sign-up-form/styles.module.css
+++ b/apps/frontend/src/pages/auth/libs/components/sign-up-form/styles.module.css
@@ -1,12 +1,15 @@
 .container {
 	width: 100%;
 	max-width: 364px;
+	margin-top: 58px;
+	margin-bottom: clamp(106px, 10vh, 162px);
 }
 
 .form-title {
 	margin: 0 0 48px;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
+	line-height: 1.2;
 }
 
 .form {
@@ -16,15 +19,28 @@
 	margin: 0 0 24px;
 }
 
-.label {
-	display: flex;
-	flex-direction: column;
-	gap: 4px;
-}
-
 .login-link-text {
 	margin: 0;
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-regular);
+	line-height: 1.4;
 	color: var(--color-text-weak);
+}
+
+@media (width <= 991px) {
+	.container {
+		max-width: none;
+		margin: 0;
+	}
+}
+
+@media (width <= 768px) {
+	.form-title {
+		margin-bottom: 28px;
+		font-size: var(--font-size-h3);
+	}
+
+	.form {
+		gap: 16px;
+	}
 }
