--- a/apps/frontend/src/libs/components/app/styles.module.css
+++ b/apps/frontend/src/libs/components/app/styles.module.css
@@ -9,3 +9,19 @@
 	display: flex;
 	flex-grow: 1;
 }
+
+.components-container {
+	display: flex;
+	flex-direction: column;
+	gap: 5rem;
+	align-items: center;
+}
+
+.sidebar-container {
+	align-self: flex-start;
+}
+
+.carousel-container {
+	width: 50%;
+	margin-bottom: 5rem;
+}
