--- a/apps/frontend/src/libs/components/app/styles.module.css
+++ b/apps/frontend/src/libs/components/app/styles.module.css
@@ -1,8 +1,6 @@
 .container {
 	display: flex;
 	flex-grow: 1;
-	flex-direction: column;
-	justify-content: center;
 }
 
 .outlet-container {
@@ -15,6 +13,7 @@
 	flex-direction: column;
 	gap: 5rem;
 	align-items: center;
+	justify-content: space-between;
 }
 
 .sidebar-container {
