--- a/apps/frontend/src/libs/components/app/styles.module.css
+++ b/apps/frontend/src/libs/components/app/styles.module.css
@@ -1,11 +1,26 @@
 .container {
 	display: flex;
 	flex-grow: 1;
-	flex-direction: column;
-	justify-content: center;
 }
 
 .outlet-container {
 	display: flex;
 	flex-grow: 1;
+}
+
+.components-container {
+	display: flex;
+	flex-direction: column;
+	gap: 5rem;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.sidebar-container {
+	align-self: flex-start;
+}
+
+.carousel-container {
+	width: 50%;
+	margin-bottom: 5rem;
 }
