--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -3,8 +3,13 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	padding: 12px 32px;
+	padding: 12px 120px;
 	border-bottom: 1px solid var(--color-stroke-weak);
+}
+
+.header-logo {
+	display: block;
+	margin: 0 auto;
 }
 
 .user-info {
@@ -17,4 +22,16 @@
 .buttons {
 	display: flex;
 	gap: 8px;
+}
+
+@media (width <= 991px) {
+	.header {
+		padding-inline: 32px;
+	}
+}
+
+@media (width <= 768px) {
+	.header {
+		padding-inline: 16px;
+	}
 }
