--- a/apps/frontend/src/libs/components/carousel/style.module.css
+++ b/apps/frontend/src/libs/components/carousel/style.module.css
@@ -1,5 +1,9 @@
 .carousel-container {
+	position: relative;
+	padding: 0.7%;
 	margin: 0.7%;
+	border: 1px solid black;
+	border-radius: 5px;
 }
 
 .carousel {
@@ -39,6 +43,22 @@
 	border-radius: 5%;
 	-webkit-user-drag: none;
 	transition: transform 0.2s ease;
+}
+
+.carousel-scroll-button {
+	position: absolute;
+	bottom: 0;
+	left: 0%;
+	z-index: 100;
+	height: 5%;
+	background-color: var(--color-fill-brand-strong);
+	border-radius: 5px;
+	opacity: 0.5;
+}
+
+.carousel-scroll-button:hover {
+	cursor: pointer;
+	opacity: 1;
 }
 
 .bounce-left {
