--- a/apps/frontend/src/assets/css/scaffolding.css
+++ b/apps/frontend/src/assets/css/scaffolding.css
@@ -32,3 +32,19 @@ body {
 	clip: rect(0 0 0 0);
 	clip-path: inset(100%);
 }
+
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background: var(--color-background-base);
+	border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: var(--color-fill-brand-strong);
+	border: 1px solid var(--color-background-base);
+	border-radius: 8px;
+}
