--- a/apps/frontend/src/libs/components/carousel/style.module.css
+++ b/apps/frontend/src/libs/components/carousel/style.module.css
@@ -1,15 +1,15 @@
 .carousel-container {
 	position: relative;
 	padding: 0.7%;
+	padding-bottom: 0;
 	margin: 0.7%;
-	border: 1px solid black;
 	border-radius: 5px;
 }
 
 .carousel {
 	display: flex;
+	max-width: 100%;
 	max-height: 100%;
-	aspect-ratio: 5 / 1;
 	overflow-x: auto;
 	scroll-behavior: auto;
 	cursor: grab;
@@ -21,16 +21,21 @@
 	transition: transform 1s ease-out;
 }
 
-.carousel::-webkit-scrollbar {
-	display: none;
-}
-
 .carousel-item {
 	flex: 0 0 20%;
+	aspect-ratio: 1 / 1;
 	padding: 0.7%;
 	overflow: hidden;
 	pointer-events: none;
 	user-select: none;
+}
+
+.carousel-item:first-child {
+	padding-left: 0;
+}
+
+.carousel-item:last-child {
+	padding-right: 0;
 }
 
 .carousel-item img {
@@ -45,12 +50,32 @@
 	transition: transform 0.2s ease;
 }
 
-@media (width <= 768px) {
-	.carousel {
-		aspect-ratio: 3 / 1;
-	}
+.carousel::-webkit-scrollbar-thumb {
+	background-color: transparent;
+	border-radius: 4px;
+	opacity: 0.5;
+}
 
+.carousel:focus::-webkit-scrollbar-thumb,
+.carousel:hover::-webkit-scrollbar-thumb {
+	cursor: pointer;
+	background-color: var(--color-stroke-strong);
+}
+
+.carousel::-webkit-scrollbar-thumb:hover {
+	background-color: var(--color-fill-brand-strong);
+}
+
+.carousel::-webkit-scrollbar {
+	height: 0.6vw;
+}
+
+@media (width <= 768px) {
 	.carousel-item {
 		flex: 0 0 33.33%;
+	}
+
+	.carousel::-webkit-scrollbar {
+		height: 1vw;
 	}
 }
