--- a/apps/frontend/src/pages/profile/libs/components/profile-form/styles.module.css
+++ b/apps/frontend/src/pages/profile/libs/components/profile-form/styles.module.css
@@ -1,7 +1,6 @@
-.container {
+.form {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: space-between;
-	height: 100vh;
+	height: 100%;
 }
