--- a/apps/frontend/src/pages/profile/libs/components/user-details/styles.module.css
+++ b/apps/frontend/src/pages/profile/libs/components/user-details/styles.module.css
@@ -1,11 +1,11 @@
-.avatar-container {
+.user-details-avatar {
 	display: flex;
 	gap: 1rem;
 	align-items: center;
 	margin: 1.8rem 0;
 }
 
-.button-container {
+.user-details-button-container {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
