--- a/apps/frontend/src/pages/profile/styles.module.css
+++ b/apps/frontend/src/pages/profile/styles.module.css
@@ -20,10 +20,13 @@
 }
 
 .profile-content {
+	display: flex;
 	flex: 1;
-	width: 22rem;
-	height: 100%;
-	margin: 0 auto;
+	justify-content: center;
+}
+
+.profile-content > svg {
+	align-self: center;
 }
 
 .profile-tab {
