--- a/apps/frontend/src/libs/components/map/styles.module.css
+++ b/apps/frontend/src/libs/components/map/styles.module.css
@@ -1,10 +1,10 @@
 .map-container {
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: 100%;
 	overflow: hidden;
 	border-radius: 8px;
-	box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%);
+	box-shadow: 0 4px 6px -1px var(--color-shadow-weak);
 }
 
 .map {
