--- a/apps/frontend/src/libs/components/carousel/style.module.css
+++ b/apps/frontend/src/libs/components/carousel/style.module.css
@@ -32,7 +32,7 @@
 	padding-right: 0;
 }
 
-.carousel-item img {
+.carousel-image {
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -42,26 +42,6 @@
 	border-radius: 5%;
 	-webkit-user-drag: none;
 	transition: transform 0.2s ease;
-}
-
-.carousel::-webkit-scrollbar-thumb {
-	background-color: transparent;
-	border-radius: 4px;
-	opacity: 0.5;
-}
-
-.carousel:focus::-webkit-scrollbar-thumb,
-.carousel:hover::-webkit-scrollbar-thumb {
-	cursor: pointer;
-	background-color: var(--color-stroke-strong);
-}
-
-.carousel::-webkit-scrollbar-thumb:hover {
-	background-color: var(--color-fill-brand-strong);
-}
-
-.carousel::-webkit-scrollbar {
-	height: 0.6vw;
 }
 
 @media (width <= 768px) {
