--- a/apps/frontend/src/pages/auth/styles.module.css
+++ b/apps/frontend/src/pages/auth/styles.module.css
@@ -22,9 +22,13 @@
 }
 
 .logo {
-	display: flex;
 	align-self: start;
 	padding: 32px 48px;
+}
+
+.auth-logo {
+	display: block;
+	margin: 0 auto;
 }
 
 @media (width <= 991px) {
