--- a/apps/frontend/src/libs/components/carousel/style.module.css
+++ b/apps/frontend/src/libs/components/carousel/style.module.css
@@ -1,35 +1,38 @@
 .carousel-container {
+	position: relative;
+	padding: 0.7%;
+	padding-bottom: 0;
 	margin: 0.7%;
+	border-radius: 5px;
 }
 
 .carousel {
 	display: flex;
+	max-width: 100%;
 	max-height: 100%;
-	aspect-ratio: 5 / 1;
 	overflow-x: auto;
 	scroll-behavior: auto;
-	cursor: grab;
 	transition: transform 0.1s ease-out;
-}
-
-.carousel.dragging {
-	cursor: grabbing;
-	transition: transform 1s ease-out;
-}
-
-.carousel::-webkit-scrollbar {
-	display: none;
 }
 
 .carousel-item {
 	flex: 0 0 20%;
+	aspect-ratio: 1 / 1;
 	padding: 0.7%;
 	overflow: hidden;
 	pointer-events: none;
 	user-select: none;
 }
 
-.carousel-item img {
+.carousel-item:first-child {
+	padding-left: 0;
+}
+
+.carousel-item:last-child {
+	padding-right: 0;
+}
+
+.carousel-image {
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -41,120 +44,12 @@
 	transition: transform 0.2s ease;
 }
 
-.bounce-left {
-	animation: spring-bounce-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-.bounce-right {
-	animation: spring-bounce-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-.slingshot-left {
-	animation: slingshot-return-left 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.slingshot-right {
-	animation: slingshot-return-right 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
 @media (width <= 768px) {
-	.carousel {
-		aspect-ratio: 3 / 1;
-	}
-
 	.carousel-item {
 		flex: 0 0 33.33%;
 	}
-}
 
-@keyframes spring-bounce-left {
-	0% {
-		transform: translateX(0);
-	}
-
-	20% {
-		transform: translateX(2%);
-	}
-
-	40% {
-		transform: translateX(-1%);
-	}
-
-	60% {
-		transform: translateX(0.5%);
-	}
-
-	80% {
-		transform: translateX(-0.25%);
-	}
-
-	100% {
-		transform: translateX(0);
-	}
-}
-
-@keyframes spring-bounce-right {
-	0% {
-		transform: translateX(0);
-	}
-
-	20% {
-		transform: translateX(-2%);
-	}
-
-	40% {
-		transform: translateX(1%);
-	}
-
-	60% {
-		transform: translateX(-0.5%);
-	}
-
-	80% {
-		transform: translateX(0.25%);
-	}
-
-	100% {
-		transform: translateX(0);
-	}
-}
-
-@keyframes slingshot-return-left {
-	0% {
-		transform: translateX(0);
-	}
-
-	20% {
-		transform: translateX(0.5%);
-	}
-
-	40% {
-		transform: translateX(0.2%);
-	}
-
-	60% {
-		transform: translateX(-0.1%);
-	}
-
-	100% {
-		transform: translateX(0);
-	}
-}
-
-@keyframes slingshot-return-right {
-	0% {
-		transform: translateX(0);
-	}
-
-	40% {
-		transform: translateX(-0.2%);
-	}
-
-	60% {
-		transform: translateX(+0.1%);
-	}
-
-	100% {
-		transform: translateX(0);
+	.carousel::-webkit-scrollbar {
+		height: 1vw;
 	}
 }
