--- a/apps/frontend/src/libs/components/header/libs/components/user-dropdown/styles.module.css
+++ b/apps/frontend/src/libs/components/header/libs/components/user-dropdown/styles.module.css
@@ -1,6 +1,6 @@
 .user-dropdown {
 	width: 100%;
-	padding: 10px;
+	padding: 8px 0;
 	background-color: var(--color-base);
 	border: 1px solid var(--color-stroke-weak);
 	border-radius: 8px;
@@ -10,25 +10,53 @@
 	display: flex;
 	flex-direction: column;
 	padding: 0;
-	margin: 10px 0 15px;
-	font-family: var(--font-family);
-	font-size: var(--font-size-small);
-	font-weight: var(--font-weight-regular);
+	margin: 0;
 	list-style: none;
 }
 
-.list-item {
-	padding: 10px;
-	text-align: center;
-	border-bottom: 1px solid var(--color-stroke-weak);
-	border-radius: 10px;
-	transition: background 0.4s ease;
+.button {
+	padding: 0;
+	cursor: pointer;
+	background: none;
+	border: none;
 }
 
-.list-item:last-child {
-	border-bottom: none;
+.link,
+.button {
+	display: flex;
+	gap: 12px;
+	align-items: center;
+	padding: 12px 24px;
+	color: var(--color-text-strong);
+	text-decoration: none;
+	border-left: 4px solid transparent;
+	transition:
+		background-color 0.4s ease,
+		border-left-color 0.4s ease,
+		color 0.4s ease;
 }
 
-.list-item:hover {
-	background: var(--color-fill-weak);
+.label,
+.button {
+	font-size: var(--font-size-tiny);
+	font-weight: var(--font-weight-regular);
+	line-height: 1.5;
+	white-space: nowrap;
+}
+
+.link:hover,
+.button:hover {
+	color: var(--color-text-strong);
+	cursor: pointer;
+	background-color: var(--color-fill-weaker);
+}
+
+.link-active {
+	background-color: var(--color-brand-50);
+	border-left: 4px solid var(--color-stroke-selected);
+}
+
+.icon {
+	display: flex;
+	color: var(--color-icon-neutral);
 }
