--- a/apps/frontend/src/pages/explore/styles.module.css
+++ b/apps/frontend/src/pages/explore/styles.module.css
@@ -1,6 +1,16 @@
 .main {
+	position: relative;
 	display: flex;
 	flex-grow: 1;
+}
+
+.routes-container {
+	position: absolute;
+	top: 32px;
+	bottom: 64px;
+	left: 32px;
+	z-index: 1;
+	max-height: 100%;
 }
 
 .container {
