--- a/apps/frontend/src/libs/components/dropdown/styles.module.css
+++ b/apps/frontend/src/libs/components/dropdown/styles.module.css
@@ -1,4 +1,4 @@
-.user-dropdown {
+.dropdown {
 	width: 100%;
 	padding: 8px 0;
 	background-color: var(--color-base);
@@ -6,7 +6,7 @@
 	border-radius: 8px;
 }
 
-.dropdown-list {
+.list {
 	display: flex;
 	flex-direction: column;
 	padding: 0;
@@ -26,14 +26,15 @@
 	display: flex;
 	gap: 12px;
 	align-items: center;
+	width: 100%;
 	padding: 12px 24px;
 	color: var(--color-text-strong);
 	text-decoration: none;
 	border-left: 4px solid transparent;
 	transition:
-		background-color 0.4s ease,
-		border-left-color 0.4s ease,
-		color 0.4s ease;
+		background-color 0.3s ease,
+		border-left-color 0.3s ease,
+		color 0.3s ease;
 }
 
 .label,
@@ -48,7 +49,7 @@
 .button:hover {
 	color: var(--color-text-strong);
 	cursor: pointer;
-	background-color: var(--color-fill-weaker);
+	background-color: var(--color-fill-weak);
 }
 
 .icon {
