--- a/apps/frontend/src/pages/construct-route/styles.module.css
+++ b/apps/frontend/src/pages/construct-route/styles.module.css
@@ -1,7 +1,11 @@
 .main {
-	position: absolute;
-	width: 100%;
-	height: 100%;
+	position: relative;
+	display: flex;
+	flex-grow: 1;
+}
+
+.map {
+	flex-grow: 1;
 }
 
 .container {
@@ -41,15 +45,20 @@
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+	overflow: hidden;
 }
 
 .list-title {
 	font-size: var(--font-size-h4);
 	font-weight: var(--font-weight-semibold);
-	line-height: 28px;
+	line-height: 1.4;
 }
 
 .list {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
 	padding: 0;
 	margin: 0;
+	overflow-y: auto;
 }
