--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,17 +1,61 @@
+.green {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
+}
+
+.green:hover,
+.green:focus-visible,
+.green:focus-visible::after,
+.green:disabled {
+	background-color: var(--color-fill-press);
+}
+
+.outline-green,
+.outline-red {
+	background-color: var(--color-background-base);
+}
+
+.outline-green {
+	color: var(--color-brand-800);
+	border-color: var(--color-brand-800);
+}
+
+.outline-red {
+	color: var(--color-text-error);
+	border-color: var(--color-text-error);
+}
+
+.upload {
+	padding: 8px 16px;
+	font-weight: var(--font-weight-semibold);
+	border: 2px solid;
+	border-radius: 30px;
+}
+
+.default {
+	padding: 12px 16px;
+	border: none;
+	border-radius: 8px;
+}
+
+.default:focus-visible::after {
+	position: absolute;
+	inset: -4px;
+	content: "";
+	background: transparent;
+	border: 2px solid;
+	border-radius: 12px;
+}
+
 .button {
 	position: relative;
 	width: 100%;
 	min-width: fit-content;
-	padding: 12px 16px;
 	font-family: Inter, sans-serif;
 	font-size: var(--font-size-small);
 	line-height: 1.5;
-	color: var(--color-text-inverse-strong);
 	text-align: center;
 	text-decoration: none;
-	background-color: var(--color-fill-brand-strong);
-	border: none;
-	border-radius: 8px;
 	box-shadow:
 		0 4px 8px -2px var(--color-shadow-weak),
 		0 2px 4px -2px var(--color-shadow-strong);
@@ -20,25 +64,13 @@
 
 .button:hover {
 	cursor: pointer;
-	background-color: var(--color-fill-press);
 }
 
 .button:focus-visible {
 	outline: none;
-	background-color: var(--color-fill-press);
-}
-
-.button:focus-visible::after {
-	position: absolute;
-	inset: -4px;
-	content: "";
-	background: transparent;
-	border: 2px solid var(--color-fill-press);
-	border-radius: 12px;
 }
 
 .button:disabled {
-	background-color: var(--color-fill-press);
 	box-shadow: none;
 	opacity: 0.3;
 }
