--- a/apps/frontend/src/libs/components/create-route-form/styles.module.css
+++ b/apps/frontend/src/libs/components/create-route-form/styles.module.css
@@ -1,31 +1,29 @@
+.header {
+	margin: 0 0 12px;
+}
+
 .title {
 	margin: 0;
-	margin-bottom: 24px;
-	font-size: var(--font-size-h4);
-	line-height: 1;
+	font-size: var(--font-size-h3);
+	color: var(--color-text-strong);
 }
 
 .form {
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
-}
-
-.field {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	height: fit-content;
+	font-size: var(--font-size-small);
 }
 
 .label {
-	margin-bottom: 8px;
+	font-weight: var(--font-weight-bold);
 }
 
 .route-section {
 	display: flex;
 	flex-direction: column;
 	gap: 12px;
+	font-size: var(--font-size-h4);
 }
 
 .footer {
@@ -33,6 +31,6 @@
 	justify-content: flex-end;
 }
 
-.button-container {
+.action-buttons {
 	width: 120px;
 }
