--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -25,20 +25,20 @@
 	border-color: var(--color-text-error);
 }
 
-.upload {
+.outlined {
 	padding: 8px 16px;
 	font-weight: var(--font-weight-semibold);
 	border: 2px solid;
 	border-radius: 30px;
 }
 
-.default {
+.filled {
 	padding: 12px 16px;
 	border: none;
 	border-radius: 8px;
 }
 
-.default:focus-visible::after {
+.filled:focus-visible::after {
 	position: absolute;
 	inset: -4px;
 	content: "";
